syntax = "proto3";

option go_package = "pb/apipb";

package apipb;

service ApiService {
    rpc SendEmotionCategories(Empty) returns (Response);
    rpc SendStatistics(Empty) returns (Response);
}

message Empty {}

message Response {
    string status = 1;
}
