syntax = "proto3";

option go_package = "pb/storagepb";

package storagepb;

service StorageService {
    rpc AddMood(AddMoodRequest) returns (AddMoodResponse);
}

message AddMoodRequest {
    int64 chat_id = 1;
    string mood = 2;
}

message AddMoodResponse {
    string status = 1;
}